gitops/manifests/single-broker.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-without-sni
  namespace: confluent
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: controlcenter-0-internal
                port:
                  number: 9021
